Some QoL fixes to logout, and shifting main container on drawer button press

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -138,8 +138,6 @@ h1#titletag {
   align-items: center;
   height: 100vh;
   width: 100%;
-  padding-top: 5em;
-  
   background-color: #1E2022;
   color: white;
 }
@@ -156,6 +154,15 @@ h1#titletag {
   border-top-right-radius: .5em;
   border-bottom-right-radius: .5em;
   margin-right: 2em;
+}
+.main>.welcome-message {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+  color: #4E4F50;
+  height: 100%;
+  width: 100%;
 }
 input[type="file"] {
   display: none;
